--- a/wiki/CrusherHD.wiki
+++ b/wiki/CrusherHD.wiki
@@ -3,7 +3,8 @@
 = Image =
 <img src=http://crusher264.googlecode.com/svn/wiki/crusherhdtop.jpg>
 <img src=http://crusher264.googlecode.com/svn/wiki/crusherhdbottom.jpg>
-_i've already tried to read eeprom contents, but unluck_
+
+_i've already tried to read eeprom contents, but without success_
 
 = Inside device: =
 
