--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,6 +1,6 @@
 #summary Frequently Asked Questions.
 
-=== Q: How to use this library without root-priveleges: ===
+=== Q: How to use this library without root-priveleges? ===
 
 Udev rules have to be updated. Add to /etc/udev/rules.d directory file 50-udev-default.rules that contain this strings:
 
