--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -4,7 +4,5 @@
 
 Udev rules have to be updated. Add to /etc/udev/rules.d directory file 50-udev-default.rules that contain this strings:
 
-`
-# libusb device nodes
-SUBSYSTEM=="usb", ENV{DEVTYPE}=="usb_device", NAME="bus/usb/$env{BUSNUM}/$env{DEVNUM}", MODE="0666"
-`
+`# libusb device nodes
+SUBSYSTEM=="usb", ENV{DEVTYPE}=="usb_device", NAME="bus/usb/$env{BUSNUM}/$env{DEVNUM}", MODE="0666"`
