Edited wiki page through web user interface.

--- a/wiki/CrusherHD.wiki
+++ b/wiki/CrusherHD.wiki
@@ -1,6 +1,6 @@
 #summary CrusherHD reference design platform
 
-= Image =
+= Images =
 <img src=http://crusher264.googlecode.com/svn/wiki/crusherhdtop.jpg>
 <img src=http://crusher264.googlecode.com/svn/wiki/crusherhdbottom.jpg>
 
