Edited wiki page through web user interface.

--- a/wiki/ffmpeg.wiki
+++ b/wiki/ffmpeg.wiki
@@ -1,12 +1,19 @@
 #summary Patching ffmpeg instruction.
 
-=== Introduction ===
+== Introduction ==
 
 *This patch not updating so far as FFmpeg, so if it fails, try older versions of ffmpeg (for example 16 Apr 2010)*
 
-First You have to install libcrusher264 before compiling FFmpeg
+First You have to install libcrusher264 before compiling FFmpeg.
 
-=== Downloading ===
+This patch adding next features to FFmpeg:
+ * crushercap to libavdevice as input-device for CrusherCapture.
+ * libcrusher264 to libavcodec as H264 encoder for [Crusher].
+ * QBOX demuxer to libavformat as demuxer for streams, produced by MG1264/MG3500
+
+
+
+== Patching ==
 
 After downloading FFmpeg:
 
