--- a/wiki/CrusherHD.wiki
+++ b/wiki/CrusherHD.wiki
@@ -1,6 +1,14 @@
 #summary CrusherHD reference design platform
 
-= Images =
+= Device Options: =
+ *still not full, or some options may not work*
+ * H264 High/Main/Baseline profiles (I, B & P frames).
+ * Supports mpeg streams as input.
+ * can encode up to 4 D1 streams at the same time.
+ * can encode HD streams up to 1080i 50Hz
+ * _lack of deinterlacing?_
+
+= Images: =
 <img src=http://crusher264.googlecode.com/svn/wiki/crusherhdtop.jpg>
 <img src=http://crusher264.googlecode.com/svn/wiki/crusherhdbottom.jpg>
 
