--- a/wiki/CrusherCapture.wiki
+++ b/wiki/CrusherCapture.wiki
@@ -6,6 +6,7 @@
  * Due lack of deinterlacing, image width can be 288px max (with proper aspect ratio settings), that's what "blackmagic design" guys calls full 720x576.
  * AAC Audio capture with fixed samplerate 48kHz (may be other, when set proper clock?).
 
+In this mode USB-Device receiving analogue audio-video, convert it to digital and encode, after that it send encoded data over USB to host-pc. 
 
 = Image: =
 
