--- a/wiki/CrusherHD.wiki
+++ b/wiki/CrusherHD.wiki
@@ -22,5 +22,5 @@ _i've already tried to read eeprom contents, but without success_
  * USB-controller: Cypress EZ2 ([http://www.cypress.com/?mpn=CY7C68013A-56LFXC&l=1 CY7C68013A-56LFXC])
  * Encoder: Mobilygen/Maxim [http://www.maxim-ic.com/quick_view2.cfm/qv_pk/6092 MG3500]
  * RAM: 2xDDR2 ProMOS [http://www.promos.com.tw/website/html/english/product/V59/V59C1512164QC.pdf V59C1512164QCF3] (2x64Mb).
- * unknown i2c EEPROM ATMLH936 16B (maybe 24Cc16WP) _(but only 2 wires used)_
+ * unknown i2c EEPROM ATMLH936 16B (seems it's analogue of 24C16WP)
  * 99Ti 7C _(i2c clock generator?)_
