Edited wiki page through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -4,7 +4,7 @@
 
    * Support different samplerates (not only 48kHz), because flash-players don't like this sr.
    * Check NTSC support (it works in encoder-mode, but may not work on capture-mode).
-   * Fix bug with codec hot-starting. (done)
+   * Fix bug with codec hot-starting. (half-done)
    * Add MG3500 (H.264 HD Encoder) Support.
    * Move some parts of code into v4l driver.
    * Add i2c functionality. (partially done)
